# healthcheck

./: .gitignore  Dockerfile  README.md  TODOS.md  app.py  architecture.puml  config.yaml  healthcheck.service  index.html.orig  main.py  pyproject.toml  requirements.txt  start_app  stop_app
.nven/: pyvenv.cfg
app/: Dockerfile  main.py  models.py
app/api/routes/: calorie_count.py  profile_rda.py
app/core/: config.py
app/deprecated/: utils.py
app/models/: ._transaction.py  __init__.py  transaction.py
app/services/: db_utils.py  image_service.py  llm_service.py
deprecated/: app.py
static/: index.html
static/js/: app.js  daily-totals.js  meal-list.js  nutrition.js  profile.js  trends.js
