[project]
name = "healthcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.40",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.118.0",
    "openai>=1.109.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
